@@ -26,26 +26,51 @@ namespace MyMediaLite.RatingPrediction
 	/// <summary>Class that contains static methods for rating prediction</summary>
 	public class Prediction
 	{
-		/// <summary>Rates a given set of instances</summary>
+		// TODO as soon as we drop support for Mono 2.6, use default arguments
+
+		/// <summary>Rate a given set of instances and write it to a TextWriter</summary>
 		/// <param name="recommender">rating predictor</param>
 		/// <param name="ratings">test cases</param>
 		/// <param name="user_mapping">an <see cref="EntityMapping"/> object for the user IDs</param>
 		/// <param name="item_mapping">an <see cref="EntityMapping"/> object for the item IDs</param>
+		/// <param name="line_format">a format string specifying the line format; {0} is the user ID, {1} the item ID, {2} the rating</param>
 		/// <param name="writer">the TextWriter to write the predictions to</param>
 		public static void WritePredictions(
 			IRatingPredictor recommender,
 			IRatings ratings,
 			IEntityMapping user_mapping, IEntityMapping item_mapping,
+		    string line_format,
 			TextWriter writer)
 		{
 			for (int index = 0; index < ratings.Count; index++)
-				writer.WriteLine("{0}\t{1}\t{2}",
+				writer.WriteLine(line_format,
 								 user_mapping.ToOriginalID(ratings.Users[index]),
 								 item_mapping.ToOriginalID(ratings.Items[index]),
 								 recommender.Predict(ratings.Users[index], ratings.Items[index]).ToString(CultureInfo.InvariantCulture));
 		}
 
-		/// <summary>Rates a given set of instances</summary>
+		/// <summary>Rate a given set of instances and write it to a file</summary>
+		/// <param name="recommender">rating predictor</param>
+		/// <param name="ratings">test cases</param>
+		/// <param name="user_mapping">an <see cref="EntityMapping"/> object for the user IDs</param>
+		/// <param name="item_mapping">an <see cref="EntityMapping"/> object for the item IDs</param>
+		/// <param name="line_format">a format string specifying the line format; {0} is the user ID, {1} the item ID, {2} the rating</param>
+		/// <param name="filename">the name of the file to write the predictions to</param>
+		public static void WritePredictions(
+			IRatingPredictor recommender,
+			IRatings ratings,
+			IEntityMapping user_mapping, IEntityMapping item_mapping,
+		    string line_format,
+			string filename)
+		{
+			if (filename.Equals("-"))
+				WritePredictions(recommender, ratings, user_mapping, item_mapping, line_format, Console.Out);
+			else
+				using ( var writer = new StreamWriter(filename) )
+					WritePredictions(recommender, ratings, user_mapping, item_mapping, line_format, writer);
+		}
+
+		/// <summary>Rate a given set of instances and write it to a file</summary>
 		/// <param name="recommender">rating predictor</param>
 		/// <param name="ratings">test cases</param>
 		/// <param name="user_mapping">an <see cref="EntityMapping"/> object for the user IDs</param>
@@ -57,11 +82,22 @@ namespace MyMediaLite.RatingPrediction
 			IEntityMapping user_mapping, IEntityMapping item_mapping,
 			string filename)
 		{
-			if (filename.Equals("-"))
-				WritePredictions(recommender, ratings, user_mapping, item_mapping, Console.Out);
-			else
-				using ( var writer = new StreamWriter(filename) )
-					WritePredictions(recommender, ratings, user_mapping, item_mapping, writer);
+			WritePredictions(recommender, ratings, user_mapping, item_mapping, "{0}\t{1}\t{2}", filename);
+		}
+
+		/// <summary>Rate a given set of instances and write it to a TextWriter</summary>
+		/// <param name="recommender">rating predictor</param>
+		/// <param name="ratings">test cases</param>
+		/// <param name="user_mapping">an <see cref="EntityMapping"/> object for the user IDs</param>
+		/// <param name="item_mapping">an <see cref="EntityMapping"/> object for the item IDs</param>
+		/// <param name="writer">the TextWriter to write the predictions to</param>
+		public static void WritePredictions(
+			IRatingPredictor recommender,
+			IRatings ratings,
+			IEntityMapping user_mapping, IEntityMapping item_mapping,
+			TextWriter writer)
+		{
+			WritePredictions(recommender, ratings, user_mapping, item_mapping, "{0}\t{1}\t{2}", writer);
 		}
 	}
 }
